# MastersOfTerasKasiRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  DISC.md  ISSUES.md  README.md  game.toml  keybinds.ini
.github/workflows/: release.yml
docs/: PGO.md
launcher_assets/img/: boxart.tga
patches/: psxrecomp-ae_np_create-abi.patch  psxrecomp-recomp-ui-game-root.patch
scripts/: package_release.sh  pgo_motk_intro.sh
seeds/: ghidra_funcs.txt
tools/: intro_fps_probe.py  prepare_disc.py
